css truncation fix for Safari

--- a/include/css/manage_sections.css
+++ b/include/css/manage_sections.css
@@ -409,10 +409,14 @@ ul#section-clipboard-items li.clipboard-empty-msg{
 	border-top:1px solid #fff;
 	border-bottom:1px solid #ddd;
 	box-sizing:border-box;
+}
+#ck_editable_areas li a{
+	display:block;
 	text-overflow:ellipsis;
 	white-space:nowrap;
 	overflow:hidden;
 }
+
 #ck_editable_areas a,
 #ck_editable_areas a:visited{
 	color:#333;
