--- a/include/css/manage_sections_compact.css
+++ b/include/css/manage_sections_compact.css
@@ -411,10 +411,16 @@ ul#section-clipboard-items li.clipboard-empty-msg{
 	padding:9px 0;
 	border-top:1px solid #fff;
 	border-bottom:1px solid #ddd;
+	box-sizing:border-box;
+}
+
+#ck_editable_areas li a{
+	display:block;
 	text-overflow:ellipsis;
 	white-space:nowrap;
 	overflow:hidden;
 }
+
 #ck_editable_areas a,
 #ck_editable_areas a:visited{
 	color:#333;
